--- a/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
+++ b/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
@@ -58,12 +58,13 @@
   dataIndex="person"
   >
   </ext-gridcolumn>
-  <ext-datecolumn
+  <ext-gridcolumn
   text="Date"
   dataIndex="date"
   filterType="date"
+  formatter="date('m/d/Y')"
   />
-  </ext-datecolumn>
+  </ext-gridcolumn>
   <ext-gridcolumn
   text="Value"
   dataIndex="value"
