EWC-8 : Kitchensink issues fix

--- a/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
+++ b/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
@@ -58,13 +58,14 @@
   dataIndex="person"
   >
   </ext-gridcolumn>
-  <ext-gridcolumn
+  <ext-datecolumn
   text="Date"
   dataIndex="date"
   filterType="date"
+  format="m/d/Y"
   formatter="date('m/d/Y')"
-  />
-  </ext-gridcolumn>
+  >
+  </ext-datecolumn>
   <ext-gridcolumn
   text="Value"
   dataIndex="value"
