KitchenSink examples issues fix

--- a/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
+++ b/examples/ext-web-components-kitchensink/src/view/grids/add-ons/gridfilterbar/GridFilterbarComponent.html
@@ -5,7 +5,7 @@
   title="Grid Filter Toolbar"
   onready="gridfilterbar.gridReady"
   height="100%"
-  
+  emptyText="No Matching Records"
   titleBar = '{
     "shadow": "false",
     "items": [{
