EXTREACT-146 7.5.x KS Upgrade

--- a/examples/ext-react-kitchensink/public/ext-modern-runtime/material/material-all.scss
+++ b/examples/ext-react-kitchensink/public/ext-modern-runtime/material/material-all.scss
@@ -1575,6 +1575,7 @@ $relative-image-path-for-uis: $theme-base-resource-path;
 @import '../../ext/modern/theme-base/sass/var/grid/selection/Model';
 @import '../../ext/modern/theme-base/sass/var/grid/plugin/ColumnResizing';
 @import '../../ext/modern/theme-base/sass/var/grid/cell/Group';
+@import '../../ext/modern/theme-base/sass/var/grid/filters/Plugin';
 @import '../../ext/modern/theme-base/sass/var/grid/plugin/grouping/Column';
 @import '../../ext/modern/theme-base/sass/var/grid/plugin/grouping/Panel';
 @import '../../ext/modern/theme-base/sass/var/grid/plugin/Summaries';
@@ -1671,11 +1672,13 @@ $relative-image-path-for-uis: $theme-neptune-resource-path;
 @import '../../ext/modern/theme-neptune/sass/var/grid/cell/Expander';
 @import '../../ext/modern/theme-neptune/sass/var/grid/cell/Widget';
 @import '../../ext/modern/theme-neptune/sass/var/grid/column/Drag';
+@import '../../ext/modern/theme-neptune/sass/var/grid/filters/Plugin';
 @import '../../ext/modern/theme-neptune/sass/var/grid/locked/Grid';
 @import '../../ext/modern/theme-neptune/sass/var/menu/Separator';
 @import '../../ext/modern/theme-neptune/sass/var/grid/plugin/PagingToolbar';
 @import '../../ext/modern/theme-neptune/sass/var/grid/plugin/Summary';
 @import '../../ext/modern/theme-neptune/sass/var/grid/plugin/ViewOptions';
+@import '../../ext/modern/theme-neptune/sass/var/grid/plugin/filterbar/FilterBar';
 @import '../../ext/modern/theme-neptune/sass/var/grid/rowedit/Editor';
 @import '../../ext/modern/theme-neptune/sass/var/layout/Form';
 @import '../../ext/modern/theme-neptune/sass/var/panel/Header';
@@ -1979,6 +1982,7 @@ $relative-image-path-for-uis: $theme-base-resource-path;
 @import '../../ext/modern/theme-base/sass/src/grid/Grid';
 @import '../../ext/modern/theme-base/sass/src/grid/cell/Group';
 @import '../../ext/modern/theme-base/sass/src/grid/cell/Expander';
+@import '../../ext/modern/theme-base/sass/src/grid/filters/Plugin';
 @import '../../ext/modern/theme-base/sass/src/layout/Fit';
 @import '../../ext/modern/theme-base/sass/src/grid/plugin/grouping/Column';
 @import '../../ext/modern/theme-base/sass/src/grid/plugin/grouping/Panel';
